<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lmi_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/lmi_components_margin" >

    <ImageView
        android:id="@+id/lmi_contact_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/lmi_contact_image"
        android:src="@drawable/lmi_google_man" />

    <TextView
        android:id="@+id/lmi_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lmi_contact_image"
        android:paddingLeft="@dimen/lmi_components_margin"
        android:text="@string/lmi_friend_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lmi_contact_time_of_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lmi_contact_name"
        android:layout_toRightOf="@+id/lmi_contact_image"
        android:paddingLeft="@dimen/lmi_components_margin"
        android:paddingTop="@dimen/lmi_components_margin"
        android:text="@string/lmi_contact_time_of_arrival"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>